Criação de tela de notas e visualizar notas de aluno a partir de udf

--- a/React/package.json
+++ b/React/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "remask": "^0.1.0-alpha.5",
+    "vanilla-masker": "^1.2.0"
   }
 }
